package com.pg3402.csgobank.vault;

public class VaultService {
}
